:bug: download modal z-index

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -245,3 +245,7 @@ button[role="tab"] {
 .gray-box .lazyload-wrapper {
   height: 100%;
 }
+
+.chakra-modal__overlay {
+  z-index: 5;
+}
